k8s/deployments/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: softdesign
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: gcr.io/teste-softdesign/app:v1
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
        ports:
        - containerPort: 3000
