k8s/deployments/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: softdesign
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
