k8s/deployments/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: softdesign
spec:
  tls:
  - hosts:
    - test.girafamimosa.com.br
    secretName: certificate
  rules:
  - host: test.girafamimosa.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 3000
